force-app/main/default/objects/AV_ConfiguracionGrafico__mdt/AV_ConfiguracionGrafico__mdt.object-meta.xml
<CustomObject>
    <description>se utiliza para almacenar configuraciones relacionadas con gráficos</description>
    <label>Configuración Gráfico</label>
    <pluralLabel>Configuración Gráficos</pluralLabel>
</CustomObject>