force-app/main/default/objects/AV_ConfiguracionGrafico__mdt/fields/AV_Orden__c.field-meta.xml
<CustomField>
    <fullName>AV_Orden__c</fullName>
    <label>Orden</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>