force-app/main/default/objects/AV_ConfiguracionGrafico__mdt/fields/AV_Redirect__c.field-meta.xml
<CustomField>
    <fullName>AV_Redirect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marca si el gráfico ha de contenr un boton para ir al buscador</description>
    <label>Redirect</label>
    <type>Checkbox</type>
</CustomField>