force-app/main/default/objects/AV_ConfiguracionGrafico__mdt/fields/AV_ReportName__c.field-meta.xml
<CustomField>
    <fullName>AV_ReportName__c</fullName>
    <description>DeveloperName del informe vinculado con el gráfico (sólo para metric charts).</description>
    <inlineHelpText>DeveloperName del informe vinculado con el gráfico (sólo para metric charts).</inlineHelpText>
    <label>Informe vinculado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>