force-app/main/default/objects/AV_ConfiguracionGrafico__mdt/fields/AV_UserFilterField__c.field-meta.xml
<CustomField>
    <fullName>AV_UserFilterField__c</fullName>
    <description>filtro de campo usuario</description>
    <label>Campo Filtro Usuario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>