force-app/main/default/objects/AV_ConfiguracionGrafico__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>AV_Data__c</columns>
    <columns>AV_ReportName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DeveloperName</field>
        <operation>notContain</operation>
        <value>Reto</value>
    </filters>
    <filters>
        <field>DeveloperName</field>
        <operation>notContain</operation>
        <value>Grafico</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>